<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_add"
            android:title="@string/new_sprite" />
        <item
            android:id="@+id/nav_open"
            android:icon="@drawable/ic_folder_open"
            android:title="@string/open" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_history"
            android:title="@string/recent_files" />
    </group>

    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
        </menu>
    </item>

</menu>