<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/tool_select"
            android:icon="@drawable/ic_select"
            android:title="@string/select"
            app:showAsAction="never" />
        <item
            android:id="@+id/tool_move"
            android:icon="@drawable/ic_move"
            android:title="@string/move"
            app:showAsAction="never" />
        <item
            android:id="@+id/tool_brush"
            android:icon="@drawable/ic_brush"
            android:title="@string/brush"
            app:showAsAction="never" />
        <item
            android:id="@+id/tool_eraser"
            android:icon="@drawable/ic_eraser"
            android:title="@string/eraser"
            app:showAsAction="never" />
        <item
            android:id="@+id/tool_fill"
            android:icon="@drawable/ic_fill"
            android:title="@string/fill"
            app:showAsAction="never" />
        <item
            android:id="@+id/tool_eyedropper"
            android:icon="@drawable/ic_eyedropper"
            android:title="@string/eyedropper"
            app:showAsAction="never" />
        <item
            android:id="@+id/tool_line"
            android:icon="@drawable/ic_line"
            android:title="Line"
            app:showAsAction="never" />
        <item
            android:id="@+id/tool_rect"
            android:icon="@drawable/ic_rect"
            android:title="Rectangle"
            app:showAsAction="never" />
        <item
            android:id="@+id/tool_ellipse"
            android:icon="@drawable/ic_ellipse"
            android:title="Ellipse"
            app:showAsAction="never" />
    </group>

</menu>