<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.aseprite.android.ui.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_newSpriteFragment"
            app:destination="@id/newSpriteFragment" />
        <action
            android:id="@+id/action_mainFragment_to_openSpriteFragment"
            app:destination="@id/openSpriteFragment" />
    </fragment>

    <fragment
        android:id="@+id/newSpriteFragment"
        android:name="com.aseprite.android.ui.NewSpriteFragment"
        android:label="@string/new_sprite_title"
        tools:layout="@layout/fragment_new_sprite" />

    <fragment
        android:id="@+id/openSpriteFragment"
        android:name="com.aseprite.android.ui.OpenSpriteFragment"
        android:label="@string/open_sprite"
        tools:layout="@layout/fragment_open_sprite" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.aseprite.android.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>